[gd_scene load_steps=14 format=3 uid="uid://drbrebgd4gd5n"]

[ext_resource type="Script" path="res://scenes/characters/musician/musician_stall.gd" id="1_wacb7"]
[ext_resource type="PackedScene" uid="uid://2isfaa6wkaj8" path="res://scenes/common/interaction_handler.tscn" id="2_bj52x"]
[ext_resource type="Script" path="res://scenes/characters/musician/xylophone_memory_game.gd" id="4_m7olm"]
[ext_resource type="Script" path="res://scenes/characters/musician/memory_game_state_machine.gd" id="5_xh75u"]
[ext_resource type="Script" path="res://scenes/characters/musician/show_sequence_state.gd" id="6_y2n5o"]
[ext_resource type="Script" path="res://scenes/characters/musician/player_input_state.gd" id="7_nuhq3"]
[ext_resource type="Script" path="res://scenes/characters/musician/result_state.gd" id="8_ukxcx"]
[ext_resource type="Script" path="res://scenes/characters/musician/idle_state.gd" id="9_07mrm"]
[ext_resource type="PackedScene" uid="uid://ctb7kh77do0es" path="res://scenes/characters/musician/xylophone.tscn" id="9_qip7a"]
[ext_resource type="PackedScene" uid="uid://c02na25l0ruyf" path="res://scenes/characters/musician/musician_and_stage.tscn" id="12_7e8dh"]
[ext_resource type="AudioStream" uid="uid://bv0vf4sf3qnsl" path="res://audio/characters/musician/xylophone/xylophone failure.wav" id="18_sa6he"]
[ext_resource type="AudioStream" uid="uid://b3upgfdcolyne" path="res://audio/characters/musician/xylophone/xylophone success.wav" id="19_223te"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_xt10f"]
radius = 1.3

[node name="MusicianStall" type="Node3D"]
script = ExtResource("1_wacb7")

[node name="MusicianAndStage" parent="." instance=ExtResource("12_7e8dh")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 4.24698, 0, 0)

[node name="XylophoneMemoryGame" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.2329, -0.538319, 1.0197)
script = ExtResource("4_m7olm")

[node name="MemoryGameStateMachine" type="Node" parent="XylophoneMemoryGame" node_paths=PackedStringArray("owner_node", "initial_state")]
script = ExtResource("5_xh75u")
owner_node = NodePath("..")
initial_state = NodePath("IdleState")

[node name="ShowSequenceState" type="Node" parent="XylophoneMemoryGame/MemoryGameStateMachine"]
script = ExtResource("6_y2n5o")

[node name="PlayerInputState" type="Node" parent="XylophoneMemoryGame/MemoryGameStateMachine"]
script = ExtResource("7_nuhq3")

[node name="ResultState" type="Node" parent="XylophoneMemoryGame/MemoryGameStateMachine"]
script = ExtResource("8_ukxcx")

[node name="IdleState" type="Node" parent="XylophoneMemoryGame/MemoryGameStateMachine"]
script = ExtResource("9_07mrm")

[node name="Xylophone" parent="XylophoneMemoryGame" instance=ExtResource("9_qip7a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03787, 1.18902)

[node name="FailureSound" type="AudioStreamPlayer" parent="XylophoneMemoryGame"]
stream = ExtResource("18_sa6he")
bus = &"SFX"

[node name="SuccessSound" type="AudioStreamPlayer" parent="XylophoneMemoryGame"]
stream = ExtResource("19_223te")
bus = &"SFX"

[node name="InteractionHandler" parent="XylophoneMemoryGame" instance=ExtResource("2_bj52x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.876854, 1.79591)
label_text = "Talk [E]"

[node name="CollisionShape3D" type="CollisionShape3D" parent="XylophoneMemoryGame/InteractionHandler"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.93062, -0.57586)
shape = SubResource("CylinderShape3D_xt10f")

[node name="MiniGameCamera" type="Camera3D" parent="XylophoneMemoryGame"]
transform = Transform3D(1, 0, 0, 0, 0.910518, 0.41347, 0, -0.41347, 0.910518, 0, 2.16019, 2.37851)
